--- a/Online/src/main/webapp/assets/mycss/checkout.css
+++ b/Online/src/main/webapp/assets/mycss/checkout.css
@@ -159,7 +159,7 @@ ol, ul {
   -ms-transition: all .2s;
   -o-transition: all .2s;
   transition: all .2s;
-  background-image: url('//c2.staticflickr.com/4/3713/20116660060_f1e51a5248_m.jpg');
+  background-image: url('http://bakersfieldairconditioningrepairs.com/wp-content/uploads/2015/03/payments_for_repair1.png');
   background-position: 0 0;
   float: left;
   height: 32px;
@@ -176,7 +176,7 @@ ol, ul {
   -ms-transition: all .2s;
   -o-transition: all .2s;
   transition: all .2s;
-  background-image: url('//c2.staticflickr.com/4/3713/20116660060_f1e51a5248_m.jpg');
+  background-image: url('http://bakersfieldairconditioningrepairs.com/wp-content/uploads/2015/03/payments_for_repair1.png');
   background-position: 0 0;
   float: left;
   height: 32px;
