--- a/Online/src/main/webapp/assets/mycss/background.css
+++ b/Online/src/main/webapp/assets/mycss/background.css
@@ -8,22 +8,23 @@ border: 1px solid red;
   border: 1px solid gray;
 } */
 
+@import url(https://fonts.googleapis.com/css?family=Dosis:300|Lato:300,400,600,700|Roboto+Condensed:300,700|Open+Sans+Condensed:300,600|Open+Sans:400,300,600,700|Maven+Pro:400,700);
+
+@import url('https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css');
 
 body, html{
-     height: 100%;
+   /*   height: 150%; */
  	background-repeat: no-repeat;
- 	background-color: #fff;
- 	background:url(https://tse4.mm.bing.net/th?id=OIP.FQEJJBPlLCJsjt8p9zGD6QEsBr&pid=15.1&P=0&w=376&h=135);
- 	font-family: 'Oxygen', sans-serif;
+ 	
+ 	/* background-color: #fff; */
+background:url(http://www.carreviewsncare.com/wp-content/uploads/2013/10/high-def-reflexion-hd-wallpaper-free.jpg);
+ 
+
+	font-family: 'Oxygen', sans-serif;
  	background-size: cover;
  	 
  	 
- 	
- /* 	     height: 100%;
- 	background-repeat: no-repeat;
- 	background:url(https://i.ytimg.com/vi/4kfXjatgeEU/maxresdefault.jpg);
- 	font-family: 'Oxygen', sans-serif;
-	    background-size: cover; */
+
 }
 
 .main{
@@ -72,8 +73,15 @@ input::-webkit-input-placeholder {
  	margin: 0 auto;
  	max-width: 330px;
     padding: 40px 40px;
+    
+   background-color:transparent; 
 
 }
+
+/* span.input-group-addon i {
+    color: #009edf;
+    font-size: 17px;
+} */
 
 .login-button{
 	margin-top: 5px;
